@@ -1,3 +1,7 @@
+2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* gcc.c-torture/compile/volatile-1.c: New test.
+
 2006-02-09  Diego Novillo  <dnovillo@redhat.com>
 
 	PR 26180
