@@ -1,3 +1,8 @@
+2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* tree-flow-inline.h (var_can_have_subvars): 
+	Volatile variables should not have subvariables.
+
 2006-02-09  Diego Novillo  <dnovillo@redhat.com>
 
 	PR 26180
